<resources>
    <string name="tfe_ic_app_name" translation_description="Mask Detector Activity [CHAR_LIMIT=40]">Mask Detector</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
        <item>Float_MobileNet_Mask_Detector</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Mask</string>
    <string name="title_stats">Stats</string>
    <string name="button_classify">Are you wearing your mask today?</string>
    <string-array name="states_array">
        <item> All </item>
        <item>	Alabama	</item>
        <item>	Alaska	</item>
        <item>	Arizona	</item>
        <item>	Arkansas	</item>
        <item>	California	</item>
        <item>	Colorado	</item>
        <item>	Connecticut	</item>
        <item>	Delaware	</item>
        <item>	Florida	</item>
        <item>	Georgia	</item>
        <item>	Hawaii	</item>
        <item>	Idaho	</item>
        <item>	Illinois	</item>
        <item>	Indiana	</item>
        <item>	Iowa	</item>
        <item>	Kansas	</item>
        <item>	Kentucky	</item>
        <item>	Louisiana	</item>
        <item>	Maine	</item>
        <item>	Maryland	</item>
        <item>	Massachusetts	</item>
        <item>	Michigan	</item>
        <item>	Minnesota	</item>
        <item>	Mississippi	</item>
        <item>	Missouri	</item>
        <item>	Montana	</item>
        <item>	Nebraska	</item>
        <item>	Nevada	</item>
        <item>	New Hampshire	</item>
        <item>	New Jersey	</item>
        <item>	New Mexico	</item>
        <item>	New York	</item>
        <item>	North Carolina	</item>
        <item>	North Dakota	</item>
        <item>	Ohio	</item>
        <item>	Oklahoma	</item>
        <item>	Oregon	</item>
        <item>	Pennsylvania	</item>
        <item>	Rhode Island	</item>
        <item>	South Carolina	</item>
        <item>	South Dakota	</item>
        <item>	Tennessee	</item>
        <item>	Texas	</item>
        <item>	Utah	</item>
        <item>	Vermont	</item>
        <item>	Virginia	</item>
        <item>	Washington	</item>
        <item>	West Virginia	</item>
        <item>	Wisconsin	</item>
        <item>	Wyoming	</item>
    </string-array>
    <string name="start_date"> Start Date</string>
    <string name="end_date"> End Date</string>
    <string name="refresh"> Refresh</string>
    <string name="state"> State</string>
    <string name="question">Do you currently have any of the following COVID-19 symptoms not typical for now?</string>
    <string name="symptom_fever">fever</string>
    <string name="symptom_cough">cough</string>
    <string name="symptom_headache">headache</string>
    <string name="questionnaire_submit">Get Result!</string>
    <string name="title_questionnaire">Questionnaire</string>
    <string name="symptom_shortbreath">"Shortness of breath of breathing difficulty "</string>
    <string name="symptom_fatique">Fatique</string>
    <string name="symptom_chills">"Chills "</string>
    <string name="title_guidelines">"Info "</string>
</resources>
